# django-menu-tree

./: .gitignore  README.md  pyproject.toml
django_menu_tree/: admin.py  apps.py  models.py  services.py  views.py
django_menu_tree/migrations/: 0001_initial.py  0002_submenu_remove_menu_parent_menu_submenu.py  0003_remove_menu_submenu_submenu_parent.py  0004_menu_parent_delete_submenu.py  0005_menu_url.py  0006_menu_use_named_url.py  0007_lolik.py  0008_alter_menu_parent.py  0009_alter_menu_url.py  0010_delete_lolik_alter_menu_name_alter_menu_url_and_more.py
django_menu_tree/static/django_menu_tree/: menu_style.css
django_menu_tree/templates/django_menu_tree/: draw_menu.html  link_resolver.html  reversal_submenu.html
django_menu_tree/templatetags/: menus.py
